force-app/main/default/objects/custom_create222__c/custom_create222__c.object-meta.xml
<CustomObject>
    <label>Custom created object222</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects222</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>