force-app/main/default/objects/custom_create222__c/fields/custom_create_222field614__c.field-meta.xml
<CustomField>
    <fullName>custom_create_222field614__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 222field614</label>
    <type>Checkbox</type>
</CustomField>